# mc

./: .gitignore  Cargo.toml  LICENSE
src/: camera.rs  main.rs  renderer.rs  shader.wgsl  texture.rs  window.rs  world.rs
src/renderer/: indirect_buffer.rs  reticle.wgsl  tf.glsl  tv.glsl  ui_renderer.rs  vertex_buffer.rs  water.wgsl
src/window/: frametime_metrics.rs
src/world/: blocks.rs  camera.rs  chunk.rs  coordinates.rs  renderer.rs  world_loader.rs
