[package]
name = "mc"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.16.1", features = ["derive"] }
env_logger = "0.11.3"
glam = { version = "0.28.0", features = ["bytemuck"] }
image = "0.25.1"
log = "0.4.21"
noise = "0.9.0"
pollster = "0.3.0"
wgpu = { version = "23.0.1" }
winit = "0.30.3"

[profile.dev]
debug = 0
strip = "debuginfo"
